added agent to lookup linkedin profile

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ langchain = "*"
 langchain-openai = "*"
 black = "*"
 python-dotenv = "*"
+langchainhub = "*"
+google-search-results = "*"
 
 [dev-packages]
 
